@@ -3,3 +3,8 @@ Facter.add("kernelversion") do
         Facter['kernelrelease'].value.split('-')[0]
     end
 end
+
+Facter.add("kernelversion") do
+    confine :kernel => :sunos
+    setcode 'uname -v'
+end
